test/Fail/Issue1523d.err
Issue1523d.agda:11.29-38: error: [EmptyTypeOfSizes]
Possibly empty type of sizes: (Size< i)
when checking that the expression λ l → f l has type Size< i → A
